# llms-can-compute-repro

./: .gitignore  README.md  STATUS.md  pyproject.toml
.jules/: bolt.md
docs/: README.md  branch_worktree_registry.md  claims_matrix.md
results/: README.md  runtime_environment.json
scripts/: README.md  export_f20_post_r42_dual_mode_model_mainline_bundle.py  export_f21_post_h43_exact_useful_case_expansion_bundle.py  export_f23_post_h47_numeric_scaling_bundle.py  export_f25_post_h48_restricted_tinyc_lowering_bundle.py  export_f28_post_h50_origin_mechanism_reentry_bundle.py  export_f29_post_h52_restricted_compiled_boundary_bundle.py  export_f30_post_h54_useful_kernel_bridge_bundle.py  export_f33_post_h59_different_cost_structure_reopen_bundle.py  export_f36_post_h60_conditional_compiled_online_reopen_qualification_bundle.py  export_f37_post_h61_compiled_online_coprocessor_reauthorization_bundle.py  export_f38_post_h62_r63_dormant_eligibility_profile_dossier.py  export_h0_release_hygiene.py  export_h10_r7_reconciliation_guard.py  export_h11_post_h9_mainline_rollover_guard.py  export_h13_post_h12_governance_stage_health.py  export_h14_core_first_reopen_guard.py  export_h22_post_h21_boundary_reopen_and_dual_track_lock.py  export_h23_refreeze_after_r26_r27_r28.py  export_h25_refreeze_after_r30_r31_decision_packet.py  export_h26_refreeze_after_r32_boundary_sharp_zoom.py  export_h2_bundle_lock_audit.py  export_h30_post_r36_r37_scope_decision_packet.py  export_h31_post_h30_later_explicit_boundary_decision_packet.py  export_h32_post_r38_compiled_boundary_refreeze.py  (+105 more)
(+1594 files in other folders)
