[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "llms-can-compute-repro"
version = "0.1.0"
description = "Reproduction-oriented research code for append-only execution traces and 2D hard-max retrieval."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Wenbo" },
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]
m5 = [
  "torch>=2.6,<3",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/geometry",
  "src/exec_trace",
  "src/bytecode",
  "src/model",
  "src/benchmarks",
  "src/utils",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
